[package]
name = "tufure-os-aether-chain"
version = "0.1.0"
edition = "2021"
authors = ["Divine Kernel Team <dev@tufure.aetherchain>"]
description = "TUFURE OS: AETHER CHAIN - Divine Architecture for Decentralized Computing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tufure/aether-chain"

[dependencies]
# Core WASM Runtime
wasmtime = "14.0"
wasmtime-wasi = "14.0"

# Cryptography
sha2 = "0.10"
blake2 = "0.10"
ring = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false